<resources>
    <string name="camera_dialog_title">Warning</string>
    <string name="camera_dialog_message">Camera permissions are disabled or the camera is occupied by another app!</string>
    <string name="sorry_no_permission">Sorry ,your license is not supported for these functions.</string>
    <string name="device_level_function_tip">This function is only supported on high-performance mobile phones</string>
    <string name="camera_dialog_open">Retry</string>
    <string name="camera_dialog_back">quit</string>
    <string name="fu_base_debug">resolution:\n%dx%d\nfps: %d\nrender time:\n%dms</string>
    <string name="save_photo_success">Saved</string>
    <string name="save_video_success">Saved</string>
    <string name="save_video_failed">Failed</string>
    <string name="save_video_too_short">The video is to short!</string>
    <string name="save_video_wait">Please wait while the video is processing</string>
    <string name="fu_base_is_tracking_text">No face detected</string>
    <string name="fu_base_incomplete_face_text">Incomplete face</string>
    <string name="fu_base_input_type_single">SingleInput</string>
    <string name="fu_base_input_type_double">DualInput</string>
    <string name="beauty_box_heavy_blur_fine">Buffing</string>
    <string name="beauty_box_heavy_blur_fine_body">Body Buffing</string>
    <string name="beauty_box_delspot">Acne Removal</string>
    <string name="beauty_box_facial_plumping">Facial Plumping</string>
    <string name="beauty_box_color_level">Skin Tone</string>
    <string name="beauty_box_red_level">Rosy</string>
    <string name="beauty_box_clarity">Clarity</string>
    <string name="beauty_box_sharpen">Sharpen</string>
    <string name="beauty_box_eye_bright">Brighten</string>
    <string name="beauty_box_tooth_whiten">Whiten</string>
    <string name="beauty_box_eye_enlarge">Enlarge</string>
    <string name="beauty_box_eye_circle">Round</string>
    <string name="beauty_box_cheek_natural">Natural</string>
    <string name="beauty_box_cheek_goddess">Goddess</string>
    <string name="beauty_box_cheek_long_face">Long face</string>
    <string name="beauty_box_cheek_round_face">Round face</string>
    <string name="beauty_box_cheekbones">Cheek</string>
    <string name="beauty_box_lower_jaw">Jaw</string>
    <string name="beauty_box_face_lift">Face Lift</string>
    <string name="beauty_box_small_head">Small Head</string>
    <string name="beauty_box_cheek_thinning">Lower Width</string>
    <string name="beauty_box_cheek_v">V Shape</string>
    <string name="beauty_box_cheek_narrow">Upper Width</string>
    <string name="beauty_box_cheek_short">Short Face</string>
    <string name="beauty_box_cheek_small">Size Face</string>
    <string name="beauty_box_intensity_chin">Chin Length</string>
    <string name="beauty_box_intensity_eye_pupil">Eye Pupil</string>
    <string name="beauty_box_intensity_eye_outter">Eye Outter</string>
    <string name="beauty_box_intensity_mouth_width">Mouth Width</string>
    <string name="beauty_box_intensity_nose_alar">Nose Alar</string>
    <string name="beauty_box_intensity_forehead">Hairline</string>
    <string name="beauty_box_intensity_nose">Nose Size</string>
    <string name="beauty_box_intensity_mouth">Mouth Size</string>
    <string name="beauty_radio_skin_beauty">Beauty Effects</string>
    <string name="beauty_radio_face_shape">Face Shaping</string>
    <string name="beauty_radio_filter">Filter</string>
    <string name="makeup_radio_lipstick">Lipstick</string>
    <string name="makeup_radio_blusher">Blusher</string>
    <string name="makeup_radio_eyebrow">Eyebrows</string>
    <string name="makeup_radio_eye_shadow">Eyeshadow</string>
    <string name="makeup_radio_eye_liner">Eyeliner</string>
    <string name="makeup_radio_eyelash">Eyelash</string>
    <string name="makeup_radio_contact_lens">Pupil</string>
    <string name="makeup_radio_contact_wocan">Silkworm</string>
    <string name="makeup_radio_contact_wocan1">Silkworm I</string>
    <string name="makeup_radio_contact_wocan2">Silkworm II</string>
    <string name="makeup_radio_contact_wocan3">Silkworm III</string>
    <string name="makeup_radio_contact_wocan4">Silkworm IV</string>
    <string name="makeup_radio_contact_wocan5">Silkworm V</string>
    <string name="makeup_radio_foundation">Foundation</string>
    <string name="makeup_radio_highlight">Highlight</string>
    <string name="makeup_radio_shadow">Shadow</string>
    <string name="makeup_radio_remove">None</string>
    <string name="makeup_customize">Custom</string>
    <string name="makeup_peach_blossom">Peach Blossom</string>
    <string name="makeup_boyfriend">Boyfriend</string>
    <string name="makeup_clear">Clear</string>
    <string name="makeup_grapefruit">Grapefruit</string>
    <string name="beauty_micro_pouch">Dark Circles</string>
    <string name="beauty_micro_nasolabial">Laugh line</string>
    <string name="beauty_micro_smile">Smile</string>
    <string name="beauty_brow_height">Brow Position</string>
    <string name="beauty_brow_space">Brow Distance</string>
    <string name="beauty_eye_lid">Eye Downturn</string>
    <string name="beauty_eye_height">Eye Position</string>
    <string name="beauty_brow_thick">Brow Thickness</string>
    <string name="beauty_lip_thick">Thick lips</string>
    <string name="beauty_face_three">Contouring</string>
    <string name="beauty_micro_canthus">Inner Corner</string>
    <string name="beauty_micro_philtrum">Mouth Position</string>
    <string name="beauty_micro_long_nose">Nose Lift</string>
    <string name="beauty_micro_eye_space">Eye Distance</string>
    <string name="beauty_micro_eye_rotate">Eye Upturn</string>
    <string name="dialog_style_reset">Whether or not reset all parameters of the Classic Style to the default?</string>
    <string name="open">Turn on</string>
    <string name="close">Turn off</string>
    <string name="beauty_face_style_none">None</string>
    <string name="style_primitive">Natural</string>
    <string name="style_classic">Classic</string>
    <string name="style_male_deity">Demigod</string>
    <string name="style_goddess">Beauty</string>
    <string name="style_handsome">handsome</string>
    <string name="style_natura">natura</string>
    <string name="style_korean_schoolgirls">Schoolgirl</string>
    <string name="style_senior_sister">Senior Sister</string>
    <string name="style_pure_desire">pure desire</string>
    <string name="style_pale_complexion">Elegant</string>
    <string name="style_zyfz">Jiah</string>
    <string name="style_alz">Eileen</string>
    <string name="style_temperament">Temperament</string>
    <string name="style_danzhuang">Baikaishui</string>
    <string name="style_segulamei">Tianxinpai</string>
    <string name="style_hunxuebaby">HunXueBaby</string>
    <string name="style_milk_feroucious">milk_feroucious</string>
    <string name="style_texture">Quality</string>
    <string name="select_data_photo">Select Image</string>
    <string name="select_data_video">Select Video</string>
    <string name="select_data_title">Please select an image or video from your photo album</string>
    <string name="image_file_does_not_exist">The selected image file does not exist.</string>
    <string name="video_file_does_not_exist">The selected video file does not exist.</string>
    <string name="future_warrior">Mouth Open</string>
    <string name="jet_mask">Blow Cheeks Up</string>
    <string name="sdx2">Eyebrow Raise</string>
    <string name="luhantongkuan_ztt_fu">Blinking</string>
    <string name="qingqing_ztt_fu">Pout</string>
    <string name="xiaobianzi_zh_fu">Smile</string>
    <string name="xiaoxueshen_ztt_fu">Blowing</string>
    <string name="push_hand">Palm</string>
    <string name="fu_lm_koreaheart">Korheart</string>
    <string name="ssd_thread_six">666</string>
    <string name="ssd_thread_cute">Fist</string>
    <string name="origin">Origin</string>
    <string name="bailiang_1">Bright 1</string>
    <string name="bailiang_2">Bright 2</string>
    <string name="bailiang_3">Bright 3</string>
    <string name="bailiang_4">Bright 4</string>
    <string name="bailiang_5">Bright 5</string>
    <string name="bailiang_6">Bright 6</string>
    <string name="bailiang_7">Bright 7</string>
    <string name="fennen_1">Pink 1</string>
    <string name="fennen_2">Pink 2</string>
    <string name="fennen_3">Pink 3</string>
    <string name="fennen_5">Pink 5</string>
    <string name="fennen_6">Pink 6</string>
    <string name="fennen_7">Pink 7</string>
    <string name="fennen_8">Pink 8</string>
    <string name="xiaoqingxin_1">Fresh 1</string>
    <string name="xiaoqingxin_3">Fresh 3</string>
    <string name="xiaoqingxin_4">Fresh 4</string>
    <string name="xiaoqingxin_6">Fresh 6</string>
    <string name="lengsediao_1">Cold tone 1</string>
    <string name="lengsediao_2">Cold tone 2</string>
    <string name="lengsediao_3">Cold tone 3</string>
    <string name="lengsediao_4">Cold tone 4</string>
    <string name="lengsediao_7">Cold tone 7</string>
    <string name="lengsediao_8">Cold tone 8</string>
    <string name="lengsediao_11">Cold tone 11</string>
    <string name="nuansediao_1">Warm tone 1</string>
    <string name="nuansediao_2">Warm tone 2</string>
    <string name="gexing_1">Personality 1</string>
    <string name="gexing_2">Personality 2</string>
    <string name="gexing_3">Personality 3</string>
    <string name="gexing_4">Personality 4</string>
    <string name="gexing_5">Personality 5</string>
    <string name="gexing_7">Personality 7</string>
    <string name="gexing_10">Personality 10</string>
    <string name="gexing_11">Personality 11</string>
    <string name="heibai_1">Fade 1</string>
    <string name="heibai_2">Fade 2</string>
    <string name="heibai_3">Fade 3</string>
    <string name="heibai_4">Fade 4</string>
    <string name="rouguang">Rouguanglengzi</string>
    <string name="weibao">Weibao</string>
    <string name="lengbaipi">Lengbaipi</string>
    <string name="qingtou">Qingtou</string>
    <string name="ziran_1">Nature 1</string>
    <string name="ziran_2">Nature 2</string>
    <string name="ziran_3">Nature 3</string>
    <string name="ziran_4">Nature 4</string>
    <string name="ziran_5">Nature 5</string>
    <string name="ziran_6">Nature 6</string>
    <string name="ziran_7">Nature 7</string>
    <string name="ziran_8">Nature 8</string>
    <string name="zhiganhui_1">Grey 1</string>
    <string name="zhiganhui_2">Grey 2</string>
    <string name="zhiganhui_3">Grey 3</string>
    <string name="zhiganhui_4">Grey 4</string>
    <string name="zhiganhui_5">Grey 5</string>
    <string name="zhiganhui_6">Grey 6</string>
    <string name="zhiganhui_7">Grey 7</string>
    <string name="zhiganhui_8">Grey 8</string>
    <string name="mitao_1">Peach 1</string>
    <string name="mitao_2">Peach 2</string>
    <string name="mitao_3">Peach 3</string>
    <string name="mitao_4">Peach 4</string>
    <string name="mitao_5">Peach 5</string>
    <string name="mitao_6">Peach 6</string>
    <string name="mitao_7">Peach 7</string>
    <string name="mitao_8">Peach 8</string>
    <string name="poster_take_photo">Align the wireframe and shoot from the front</string>
    <string name="poster_change_face_error">change face failed</string>
    <string name="poster_template_face_none">No template face detected, please re-upload</string>
    <string name="dialog_no_track_face_re_shot">No face detected, please try again</string>
    <string name="dialog_no_incomplete_face_re_shot">The face is incomplete, please try again</string>
    <string name="dialog_face_rotation_not_valid_re_shot">The face deflection angle is too large，please try again</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_confirm_delete">Are you sure to delete?</string>
    <string name="recover">Restore</string>
    <string name="make_up">Makeup</string>
</resources>